tests/ui/native_storage_no_default.rs
use zorua::prelude::*;

bitstruct! {
    #[repr(C)]
    #[derive(Clone)]
    struct Bad {
        value: u16,
    }
}

fn main() {}
